# dicechanics

./: .buildinfo  .gitignore  .ruff.toml  Interface Specification.md  LICENSE  README.md  api.html  array_combs.py  genindex.html  index.html  mypy.ini  objects.inv  outcomes.py  outcomes2.py  outcomes3.py  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  setup.py  submodules.html
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: api.doctree  environment.pickle  index.doctree  submodules.doctree
API/: dicechanics.html
DiceStatistics/: BooleanDice.py  Dice.py  Pool.py  _Dice.py  _Pool.py  __init__.py  _combinations.py  _dice_combinatorics.py  _inpt_cleaning.py  _math.py  _parser.py  _popper.py  interface.py  standard.py  types.py
TTStatistics/: Dice.py  Pool.py  __init__.py  _math.py  _parser.py  _textparser.py  interface.py
_sources/: api.rst.txt  index.rst.txt  submodules.rst.txt
benchmarks/: bm_dice.py  bm_die_creation.py  bm_die_features.py  bm_die_ops.py  bm_pool.py  conftest.py  groups.py  macros.py  test_bm_dice.py  test_bm_pool.py
development/: API.html  hierarchy.html
dicechanics/: Die.py  ParamChecker.py  Pool.py  _BooleanDice.py  _Dice.py  _Die.py  _Pool.py  _StringPlot.py  __init__.py  _dice_combinatorics.py  _inpt_cleaning.py  _interface.py  _math.py  _parser.py  _popper.py  _referance.py  _standard.py  _strplot.py  combinatorics.py  die.py  interface.py  math.py  ops.py  parser.py  plot.py  popper.py  standard.py  typing.py  utils.py
docs/: Makefile  OperationsFactory.puml  make.bat  requirements.txt  system.puml
examples/: 03_Pool.ipynb  System Examples.ipynb
experiments/: array_combs.py
src/: icep.py  main5.py
tests/: anydicefetcher.py  conftest.py  dice_unittest.py  test_arithmatic.py  test_bag.py  test_constructor.py  test_dice.py  test_dice_internals.py  test_die.py  test_dieunit.py  test_features.py  test_level0.py  test_level1.py  test_level2.py  test_level3.py  test_level4.py  test_magic.py  test_main.py  test_math.py  test_mathunit.py  test_opertators.py  test_paramchecker.py  test_pool.py  test_sortedstring.py  test_statisitcal.py  test_statistical_number_unit.py  test_statistical_unit.py  test_strplot.py  test_textparser.py
usage/: DicechanicsExamples.html  (+1 more)
(+156 files in other folders)
