[build-system]
requires = [
  "hatchling",
]
build-backend = "hatchling.build"

[project]
name = 'DiceStatistics'
version = '2.0.0b'
authors = [
    {name = 'Daniel Hall', email = 'blankemail@email.com'},
]
description = "A dice statistics module"
readme = 'README.md'
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/daplhall/DiceStatistics"
Issues = "https://github.com/daplhall/DiceStatistics/issues"

[tool.hatch.build.targets.sdist]
include = [
  "DiceStatistics/*",
  "tests/*"
]