[build-system]
requires = [
  "hatchling",
]
build-backend = "hatchling.build"

[project]
name = 'dicechanics'
version = '2.0.0b'
authors = [
    {name = 'Daniel Hall', email = 'blankemail@email.com'},
]
description = "A tool for doing statistic on dice mechanics"
readme = 'README.md'
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/daplhall/DiceStatistics"
Issues = "https://github.com/daplhall/DiceStatistics/issues"

[tool.hatch.build.targets.sdist]
include = [
  "dicechanics/*",
  "tests/*"
]